syntax = "proto3";

package golem.cloud.common;

import "golem/common/error_body.proto";

message LoginError {
  oneof error {
    golem.common.ErrorsBody bad_request = 1;
    golem.common.ErrorBody external = 2;
    golem.common.ErrorBody internal = 3;
  }
}
