syntax = "proto3";

package golem.token;

import "golem/token/token.proto";
import "golem/token/token_secret.proto";

message UnsafeToken {
  golem.token.Token data = 1;
  golem.token.TokenSecret secret = 2;
}
